# barrett-reduction-cpp

./: .clang-tidy  .gitlint  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  br.cpp
libbr/: br-test.cpp  br.hpp  util.hpp
